--- a/1_partie_api.ipynb
+++ b/1_partie_api.ipynb
@@ -43,10 +43,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 aéronefs B77W d'Air France sont actuellement en activité en Europe.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Suivre les avions Boeing B77W d'Air France\n",
+    "airline_icao = \"AFR\"\n",
+    "aircraft_type = \"B77W\"\n",
+    "\n",
+    "# You may also set a custom region, such as: bounds = \"73,-12,-156,38\"\n",
+    "zone = fr_api.get_zones()[\"europe\"]\n",
+    "bounds = fr_api.get_bounds(zone)\n",
+    "\n",
+    "airfrance_flights = fr_api.get_flights(\n",
+    "    aircraft_type = aircraft_type,\n",
+    "    airline = airline_icao,\n",
+    "    bounds = bounds\n",
+    ")\n",
+    "print(str(len(airfrance_flights)) + \" aéronefs B77W d'Air France sont actuellement en activité en Europe.\")"
+   ]
   },
   {
    "cell_type": "code",
