--- a/1_partie_api.ipynb
+++ b/1_partie_api.ipynb
@@ -24,17 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Il y a 9 zones géographiques, parmi lesquelles europe, northamerica, southamerica...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compter les zones géographiques\n",
     "zones = fr_api.get_zones()\n",
@@ -43,17 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 aéronefs B77W d'Air France sont actuellement en activité en Europe.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Suivre les avions Boeing B77W d'Air France\n",
     "airline_icao = \"AFR\"\n",
@@ -76,7 +60,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Configurer le client pour récupérer 5 vols\n",
+    "flight_tracker = fr_api.get_flight_tracker_config()\n",
+    "flight_tracker.limit = 5\n",
+    "\n",
+    "fr_api.set_flight_tracker_config(flight_tracker)\n",
+    "\n",
+    "airfrance_flights2 = fr_api.get_flights(\n",
+    "    aircraft_type = aircraft_type,\n",
+    "    airline = airline_icao,\n",
+    "    bounds = bounds\n",
+    ")\n",
+    "\n",
+    "print(f\"On ne récupère plus que {len(airfrance_flights2)} résultats.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Récupérer des détails sur les vols\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
