--- a/1_partie_api.ipynb
+++ b/1_partie_api.ipynb
@@ -78,13 +78,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le vol 35acf830 au départ de l'aéroport Paris Charles de Gaulle Airport et à destination de Dubai International Airport         se déplace à une vitesse au solde 512 noeuds.\n",
+      "Le vol 35ad965e au départ de l'aéroport Paris Charles de Gaulle Airport et à destination de New York John F. Kennedy International Airport         se déplace à une vitesse au solde 470 noeuds.\n",
+      "Le vol 35acfdca au départ de l'aéroport Paris Charles de Gaulle Airport et à destination de Seoul Incheon International Airport         se déplace à une vitesse au solde 516 noeuds.\n",
+      "Le vol 35abd9dc au départ de l'aéroport Bangkok Suvarnabhumi Airport et à destination de Paris Charles de Gaulle Airport         se déplace à une vitesse au solde 388 noeuds.\n",
+      "Le vol 35acb0dc au départ de l'aéroport Paris Charles de Gaulle Airport et à destination de Miami International Airport         se déplace à une vitesse au solde 444 noeuds.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Récupérer des détails sur les vols\n",
+    "# Récupérer des informations détaillées\n",
+    "flights = fr_api.get_flights(\n",
+    "    aircraft_type = aircraft_type,\n",
+    "    airline = airline_icao,\n",
+    "    bounds = bounds\n",
+    ")\n",
     "\n",
-    "\n"
+    "for i in range(len(flights)):\n",
+    "    flight = flights[i]\n",
+    "    flight_details = fr_api.get_flight_details(flight)\n",
+    "    flight.set_flight_details(flight_details)\n",
+    "    print(f\"Le vol {flight.id} au départ de l'aéroport {flight.origin_airport_name} et à destination de {flight.destination_airport_name} se déplace à une vitesse au solde {flight.ground_speed} noeuds.\")\n"
    ]
   }
  ],
