--- a/2-dash.qmd
+++ b/2-dash.qmd
@@ -58,7 +58,7 @@ Regarder les différents composants de l'application et identifier les élément
     <summary>Cliquer pour voir la réponse</summary>
     L'application est initialisée avec l'instruction `app = Dash()`. L'attribut `layout` (mise en page) de l'objet `app` est ensuite modifié. On ajoute un titre centré, un menu déroulant qui permet de choisir une option parmi une liste de valeurs uniques, puis un emplacement pour un graphique. La fonction `update_graph` est ensuite définie, qui prend en argument une variable `value` et renvoie un graphique (*line chart*) construit à partir des données filtrées à l'aide de la variable `value`. L'abscisse du graphique correspond à la colonne `year` du tableau de données, et l'ordonnée à la colonne `pop`.
 
-    La fonction est décorée avec `@callback`, une [fonctionnalité majeure de Dash](https://dash.plotly.com/basic-callbacks). Une telle fonction est automatiquement appelée chaque fois que la propriété d'un composant d'entrée change, afin de mettre à jour une propriété dans un autre composant (la sortie). En l'occurence le composant de sortie est l'emplacement pour graphique avec l'identifiant `'graph-content'` et le composant d'entrée est le menu déroulant avec l'identifiant `'dropdown-selection'`. Tout ceci permet d'afficher le graphique correspondant au choix fait par l'utilisateur dans le menu déroulant. 
+    La fonction est décorée avec `@callback`, une [fonctionnalité majeure de Dash](https://dash.plotly.com/basic-callbacks). Une telle fonction est automatiquement appelée chaque fois que la propriété d'un composant d'entrée change, afin de mettre à jour une propriété dans un autre composant (la sortie). En l'occurrence le composant de sortie est l'emplacement pour graphique avec l'identifiant `'graph-content'` et le composant d'entrée est le menu déroulant avec l'identifiant `'dropdown-selection'`. Tout ceci permet d'afficher le graphique correspondant au choix fait par l'utilisateur dans le menu déroulant. 
 </details>
 
 :::
