Résoudre un bug lié à des listes imbriquées

--- a/2-dash.qmd
+++ b/2-dash.qmd
@@ -126,8 +126,8 @@ def fetch_flight_data(
 #| code-overflow: scroll
 #| eval: false
 @app.callback(
-    [Output('map', 'children')],
-    [Input('interval-component', 'n_intervals')],
+    Output('map', 'children'),
+    Input('interval-component', 'n_intervals'),
 )
 ```
 
