--- a/3-advanced.qmd
+++ b/3-advanced.qmd
@@ -20,26 +20,27 @@ Cet exercice est à réaliser dans le répertoire `better_app`, qui contient enc
 
 <details>
 <summary>Cliquer pour voir la réponse</summary>
-On a plusieurs nouveaux éléments. D'abord, la mise en page de l'application intègre 3 nouveaux composants `dcc.Store`. Ce composant permet de stocker de la donnée JSON dans le navigateur de l'utilisateur. On va s'en servir pour communiquer la position précédente des vols en activité à chaque callback.
 
-L'attribut `storage_type` du composant détermine le type de stockage utilisé:
+    On a plusieurs nouveaux éléments. D'abord, la mise en page de l'application intègre 3 nouveaux composants `dcc.Store`. Ce composant permet de stocker de la donnée JSON dans le navigateur de l'utilisateur. On va s'en servir pour communiquer la position précédente des vols en activité à chaque callback.
+
+    L'attribut `storage_type` du composant détermine le type de stockage utilisé:
     - `memory`: les données sont effacées lors d'un rafraichissement de la page;
     - `local`: les données sont conservées après la sortie du navigateur;
     - `session`: les données sont effacées après la sortie du navigateur.
 
-Le décorateur de callback a également changé:
-```{python}
-#| eval: false
-#| code-overflow: scroll
-@app.callback(
-    [Output('map', 'children'), Output('memory', 'data')],
-    [Input('interval-component', 'n_intervals')],
-    [State('memory', 'data')]
-)
-```
+    Le décorateur de callback a également changé:
+    ```{python}
+    #| eval: false
+    #| code-overflow: scroll
+    @app.callback(
+        [Output('map', 'children'), Output('memory', 'data')],
+        [Input('interval-component', 'n_intervals')],
+        [State('memory', 'data')]
+    )
+    ```
 
-- Premièrement, le callback met maintenant à jour deux attributs, l'attribut `children` du `dl.MapContainer` mais aussi l'attribut `data` d'un `dcc.Store`. C'est cet attribut qui est utilisé pour transmettre des données entre callbacks;
-- Deuxièmement, `dash.dependencies.State` permet de transmettre des données sans déclencher de callback lorsque l'attribut indiqué est modifié. Ici, on transmet les données du `dcc.Store 'memory'`.
+    - Premièrement, le callback met maintenant à jour deux attributs, l'attribut `children` du `dl.MapContainer` mais aussi l'attribut `data` d'un `dcc.Store`. C'est cet attribut qui est utilisé pour transmettre des données entre callbacks. Notez bien la présence d'une liste dans le `Output` du callback, qui permet de changer plusieurs éléments en une seule fois;
+    - Deuxièmement, `dash.dependencies.State` permet de transmettre des données sans déclencher de callback lorsque l'attribut indiqué est modifié. Ici, on transmet les données du `dcc.Store 'memory'`.
 
 La fonction `update_graph_live` prend ainsi un argument supplémentaire en entrée, `previous_data`. Nous souhaitons ajouter aux dictionnaires des vols de la liste `data` une clé `rotation_angle` qui contient le cap de vol en degrés. Un bloc conditionnel a donc été ajouté pour:
 
