--- a/4-final.qmd
+++ b/4-final.qmd
@@ -55,9 +55,11 @@ def fetch_flight_data(
     )
     return [
         {
+            "id": flight.id,
+            "aircraft_code": flight.aircraft_code,
             "latitude": flight.latitude,
             "longitude": flight.longitude,
-            "id": flight.id,
+            "origin_airport_iata": flight.origin_airport_iata,
             "origin_airport_iata": flight.origin_airport_iata,
             "destination_airport_iata": flight.destination_airport_iata,
             "ground_speed": flight.ground_speed,
