--- a/5-deployment.qmd
+++ b/5-deployment.qmd
@@ -29,7 +29,7 @@ Dans cette partie on propose de déployer l'application sur le SSP Cloud et de l
     - Ouvrir un Terminal;
     - Se placer à la racine du projet;
     - Appliquer les contrats Kubernetes avec la commande `kubectl apply -f kubernetes/`;
-    - Vérifier le lancement du conteneur avec la commande `watch kubectl get pods`. Le nom associé devrait être de la forme `flightradar-ui-*`; vous pouvez sortir de cet écran en faisant `Ctrl + C`;
+    - Vérifier le lancement du conteneur avec la commande `watch kubectl get pods`. Le nom associé devrait être de la forme `flightradar-ui-*`. Vous pouvez sortir de cet écran avec `Ctrl + C`;
     - Attendre que le conteneur obtienne le statut `Running`.
 
 3. Entrer dans un navigateur l'URL spécifiée dans le fichier `kubernetes/ingress.yaml`, et vérifier que l'application fonctionne correctement !
